--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="icons">
 		<object data="img/green-grapes-icon.svg" type="image/svg+xml">
 		</object>
-		<p>Grape:
+		<p class="text">Grape:
 			Indulge in the bold and juicy essence of our Orbitz Grape flavor. Each sip takes you on a journey through
 			vineyards, where plump and succulent grapes are harvested at the peak of ripeness. Our carefully crafted
 			blend captures the rich sweetness and tantalizing tartness of the finest grapes, leaving a burst of fruity
