--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-	<main>
+
 
 <div class="icons">
 		<object data="img/green-grapes-icon.svg" type="image/svg+xml">
@@ -70,7 +70,8 @@
 
 </div>
 
-	</main>
+	
+	<script src="./js/main.js"></script>
 </body>
 
 </html>
