--- a/index.html
+++ b/index.html
@@ -7,68 +7,90 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="stylesheet" href="./css/main.css">
+	<link rel="stylesheet" href="./css/grid.css">
 </head>
 
 <body>
 
 
-<div class="icons">
-		<object data="img/green-grapes-icon.svg" type="image/svg+xml">
-		</object>
-		<p class="text">Grape:
-			Indulge in the bold and juicy essence of our Orbitz Grape flavor. Each sip takes you on a journey through
-			vineyards, where plump and succulent grapes are harvested at the peak of ripeness. Our carefully crafted
-			blend captures the rich sweetness and tantalizing tartness of the finest grapes, leaving a burst of fruity
-			delight on your palate. Refreshing and full-bodied, our Grape flavor is the perfect companion for any
-			occasion, whether you're unwinding with friends or simply enjoying a moment of blissful solitude.</p>
+<div class=" grid-con">
+	<object class="col-span-4 m-col-start-6 m-col-end-12 m-col-span-4" data="img/green-grapes-icon.svg" type="image/svg+xml">
+	</object>
+	<p class="text col-span-4 m-col-span-12 box">Grape:
+		Indulge in the bold and juicy essence of our Orbitz Grape flavor. Each sip takes you on a journey through
+		vineyards, where plump and succulent grapes are harvested at the peak of ripeness. Our carefully crafted
+		blend captures the rich sweetness and tantalizing tartness of the finest grapes, leaving a burst of fruity
+		delight on your palate. Refreshing and full-bodied, our Grape flavor is the perfect companion for any
+		occasion, whether you're unwinding with friends or simply enjoying a moment of blissful solitude.</p>
 </div>
-
-		<object data="img/mango-fruit-icon.svg" type="image/svg+xml">
+<hr>
+<br>
+<div class="icons grid-con">
+		<object class="col-span-4 m-col-start-6 m-col-end-12 m-col-span-4" data="img/mango-fruit-icon.svg" type="image/svg+xml">
 		</object>
-		<p>Mango:
+		<p class="text col-span-4 m-col-span-12 box">Mango:
 			Experience the tropical paradise with Orbitz Mango. Close your eyes, and let the vibrant flavors transport
 			you to sun-drenched shores, where palm trees sway and the air is filled with the intoxicating aroma of ripe
 			mangoes. Our Mango flavor captures the essence of this exotic fruit, blending its velvety sweetness with a
 			hint of tanginess to create a truly delightful sensory experience. With every sip, you'll be swept away to a
 			world of tropical bliss, feeling the warmth of the sun and the refreshing splash of ocean waves.</p>
-
-		<object data="img/watermelon-fruit-icon.svg" type="image/svg+xml">
+</div>
+<hr>
+<br>
+<br>
+<div class="icons grid-con">
+		<object class="col-span-4 m-col-start-6 m-col-end-12 m-col-span-4" data="img/watermelon-fruit-icon.svg" type="image/svg+xml">
 		</object>
-		<p>Watermelon:
+		<p class="text col-span-4 m-col-span-12 box">Watermelon:
 			Quench your thirst with the crisp and revitalizing Orbitz Watermelon. Picture yourself on a hot summer day,
 			surrounded by laughter and the coolness of a juicy watermelon slice. Our Watermelon flavor encapsulates the
 			pure essence of this beloved fruit, delivering a burst of refreshment that instantly rejuvenates your
 			senses. The natural sweetness and subtle hints of earthiness come together to create a perfectly balanced
 			flavor profile, leaving you feeling revitalized and ready to embrace the day.</p>
-
-		<object data="img/strawberry-fruit-icon.svg" type="image/svg+xml">
+</div>
+<hr>
+<br>
+<br>
+<div class="icons grid-con">
+		<object class="col-span-4 m-col-start-6 m-col-end-12 m-col-span-4" data="img/strawberry-fruit-icon.svg" type="image/svg+xml">
 		</object>
-		<p>Strawberry:
+		<p class="text col-span-4 m-col-span-12 box">Strawberry:
 			Delight in the sweet and irresistible Orbitz Strawberry flavor. Imagine strolling through sun-kissed fields,
 			plucking ripe strawberries straight from the vines. Our Strawberry flavor captures the essence of these
 			luscious berries, blending their succulent sweetness with a hint of tartness. Each sip reveals layers of
 			delicate flavors, as if you're biting into a perfectly ripe strawberry. The refreshing and vibrant notes
 			dance on your palate, creating a moment of pure indulgence that leaves you longing for more.</p>
-
-		<object data="img/fresh-apple-icon.svg" type="image/svg+xml">
+</div>
+<hr>
+<br>
+<br>
+<div class="icons grid-con">
+		<object class="col-span-4 m-col-start-6 m-col-end-12 m-col-span-4" data="img/fresh-apple-icon.svg" type="image/svg+xml">
 		</object>
-		<p>Apple:
+		<p class="text col-span-4 m-col-span-12 box">Apple:
 			Experience the crisp and tangy Orbitz Apple flavor. Journey to the enchanting orchards, where the air is
 			filled with the aroma of freshly picked apples. Our Apple flavor captures the essence of these iconic
 			fruits, with a perfect balance of tartness and natural sweetness. Close your eyes, take a sip, and let the
 			crispness of the apple dance on your tongue. Refreshing and invigorating, our Apple flavor is a delightful
 			blend that will leave you feeling refreshed and revitalized with every sip.</p>
-
-		<object data="img/lemon.svg" type="image/svg+xml">
+</div>
+<hr>
+<br>
+<br>
+<div class="icons grid-con">
+		<object class="col-span-4 m-col-start-6 m-col-end-12 m-col-span-4" data="img/lemon.svg" type="image/svg+xml">
 		</object>
-		<p>Lemon:
+		<p class="text col-span-4 m-col-span-12 box">Lemon:
 			Zest up your day with the invigorating Orbitz Lemon flavor. Immerse yourself in the vibrant citrus groves,
 			where the sun-kissed lemons are at their peak of flavor. Our Lemon flavor captures the bright and zesty
 			essence of these citrus gems, delivering a burst of tanginess that awakens your senses. With each sip,
 			you'll experience a refreshing and revitalizing sensation, as if you've just bitten into a freshly squeezed
 			lemon. Let our Lemon flavor brighten your day and leave you feeling invigorated.</p>
-
 </div>
+<hr>
+<br> 	
+
+
 
 	
 	<script src="./js/main.js"></script>
