--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 </head>
 
 <body>
-
+<h1>Interactive SVG icons</h1>
+<br>
 
 <div class=" grid-con">
+	<h2 class="hidden">Grape</h2>
 	<object class="col-span-4 m-col-start-6 m-col-end-12 m-col-span-4" data="img/green-grapes-icon.svg" type="image/svg+xml">
 	</object>
 	<p class="text col-span-4 m-col-span-12 box">Grape:
@@ -26,6 +28,7 @@
 <hr>
 <br>
 <div class="icons grid-con">
+	<h2 class="hidden">Mango</h2>
 		<object class="col-span-4 m-col-start-6 m-col-end-12 m-col-span-4" data="img/mango-fruit-icon.svg" type="image/svg+xml">
 		</object>
 		<p class="text col-span-4 m-col-span-12 box">Mango:
@@ -39,6 +42,7 @@
 <br>
 <br>
 <div class="icons grid-con">
+	<h2 class="hidden">Watermelon</h2>
 		<object class="col-span-4 m-col-start-6 m-col-end-12 m-col-span-4" data="img/watermelon-fruit-icon.svg" type="image/svg+xml">
 		</object>
 		<p class="text col-span-4 m-col-span-12 box">Watermelon:
@@ -52,6 +56,7 @@
 <br>
 <br>
 <div class="icons grid-con">
+	<h2 class="hidden">Strawberry</h2>
 		<object class="col-span-4 m-col-start-6 m-col-end-12 m-col-span-4" data="img/strawberry-fruit-icon.svg" type="image/svg+xml">
 		</object>
 		<p class="text col-span-4 m-col-span-12 box">Strawberry:
@@ -65,6 +70,7 @@
 <br>
 <br>
 <div class="icons grid-con">
+	<h2 class="hidden">Apple</h2>
 		<object class="col-span-4 m-col-start-6 m-col-end-12 m-col-span-4" data="img/fresh-apple-icon.svg" type="image/svg+xml">
 		</object>
 		<p class="text col-span-4 m-col-span-12 box">Apple:
@@ -78,6 +84,7 @@
 <br>
 <br>
 <div class="icons grid-con">
+	<h2 class="hidden">Lemon</h2>
 		<object class="col-span-4 m-col-start-6 m-col-end-12 m-col-span-4" data="img/lemon.svg" type="image/svg+xml">
 		</object>
 		<p class="text col-span-4 m-col-span-12 box">Lemon:
